Fixed text input being covered by animation on welcome screen

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
   width: 650px;
   float: left;
   height: 430px;
+  z=index:-1;
   -webkit-transform: rotate(180deg);
   -moz-transform: rotate(180deg);
   -o-transform: rotate(180deg);
@@ -28,6 +29,7 @@ body {
     padding-left:250px;
     padding-top:200px;
     position:absolute;
+    z-index: 1;
 }
 #logo {
   text-align: center;
